--- a/index.html
+++ b/index.html
@@ -16,18 +16,26 @@
   <body>
     <div class="container">
       <div class="weather-app">
-        <h1>New York</h1>
-        <ul>
-          <li>Friday 05:00</li>
-          <li>Clear</li>
-        </ul>
+        <div class="overview">
+          <h1>New York</h1>
+          <ul>
+            <li>Friday 05:00</li>
+            <li>Clear</li>
+          </ul>
+        </div>
         <div class="row">
           <div class="col-6">
-            <img
-              src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png"
-              alt="cloudy"
-            />
-            12ºC |ºF
+            <div class="cloudyfix weather-temperature">
+              <img
+                src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png"
+                alt="cloudy"
+                class="float-left"
+              />
+              <div class="float-left">
+                <strong>12</strong>
+                <span class="units"> ºC |<a href="#">ºF</a></span>
+              </div>
+            </div>
           </div>
           <div class="col-6">
             <ul>
@@ -39,7 +47,7 @@
         </div>
       </div>
       <footer>
-        This project was coded by
+        This project was coded by Pann with
         <a href="https://www.shecodes.io" target="blank">Shecodes</a> and open
         sourced on
         <a
