--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0" />
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -17,10 +18,10 @@
     <div class="container">
       <div class="weather-app">
         <div class="overview">
-          <h1>New York</h1>
+          <h1 id="city">New York</h1>
           <ul>
             <li>Friday 05:00</li>
-            <li>Clear</li>
+            <li id="description">Clear</li>
           </ul>
         </div>
         <div class="row">
@@ -32,7 +33,7 @@
                 class="float-left"
               />
               <div class="float-left">
-                <strong>12</strong>
+                <strong id="temperature">12</strong>
                 <span class="units"> ºC |<a href="#">ºF</a></span>
               </div>
             </div>
@@ -40,15 +41,15 @@
           <div class="col-6">
             <ul>
               <li>Precipitation : 0%</li>
-              <li>Humidity:73%</li>
-              <li>Wind: 2km/h</li>
+              <li>Humidity:<span id="humidity"></span>%</li>
+              <li>Wind:<span id="wind"></span> km/h</li>
             </ul>
           </div>
         </div>
       </div>
       <footer>
         This project was coded by Pann with
-        <a href="https://www.shecodes.io" target="blank">Shecodes</a> and open
+        <a href="https://www.shecodes.io" target="blank">Shecodes</a>. Open
         sourced on
         <a
           href="https://github.com/pansypanneiphyu/WeatherApp-withteacher"
