--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="overview">
           <h1 id="city">New York</h1>
           <ul>
-            <li>Friday 05:00</li>
+            <li><span id="date"></span></li>
             <li id="description">Clear</li>
           </ul>
         </div>
