Added icon from API

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="cloudyfix weather-temperature">
               <img
                 src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png"
-                alt="cloudy"
+                id="icon"
                 class="float-left"
               />
               <div class="float-left">
