Added units conversion

--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
               />
               <div class="float-left">
                 <strong id="temperature">12</strong>
-                <span class="units"> ºC |<a href="#">ºF</a></span>
+                <span class="units">
+                  <a href="#" id="celsius-link"> ºC </a> |
+                  <a href="#" id="fahrenheit-link">ºF</a></span
+                >
               </div>
             </div>
           </div>
