--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width>, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
@@ -67,6 +67,21 @@
               <li>Humidity:<span id="humidity"></span>%</li>
               <li>Wind:<span id="wind"></span> km/h</li>
             </ul>
+          </div>
+        </div>
+        <div class="weather-forecast" id="forecast"></div>
+        <div class="row">
+          <div class="col-2">
+            <div class="weather-forecast-date">Thu</div>
+            <img
+              src="http://openweathermap.org/img/wn/02n@2x.png"
+              alt=""
+              width="42"
+            />
+            <div class="weather-forecast-temperature">
+              <span class="weather-forecast-temperature-max"> 18º </span>
+              <span class="weather-forecast-temperature-min"> 12º </span>
+            </div>
           </div>
         </div>
       </div>
