--- a/index.html
+++ b/index.html
@@ -54,10 +54,7 @@
               />
               <div class="float-left">
                 <strong id="temperature">12</strong>
-                <span class="units">
-                  <a href="#" id="celsius-link"> ºC </a> |
-                  <a href="#" id="fahrenheit-link">ºF</a></span
-                >
+                <span class="units">ºC</span>
               </div>
             </div>
           </div>
